// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryRuleCustomData renders with empty items 1`] = `
<div>
  <div
    class="root"
  />
</div>
`;

exports[`QueryRuleCustomData renders with items 1`] = `
<div>
  <div
    class="root"
  >
    image-1.png image-2.png
  </div>
</div>
`;
